--- a/类.md
+++ b/类.md
@@ -1,4 +1,8 @@
-## 1. 安全类
+使用类可以大大简化我们的代码，本篇将会说一说从ES 6之前的继承到ES 6规定的类
+
+# ES 6之前
+
+## 1. 类的定义
 
 我们可以使用三种方法来创建一个数组或对象
 
@@ -153,10 +157,101 @@ function inherit(child, parent) {
         // 4. 修改constructor指向
         this.constructor = child;
     };
-    // 2. 让寄生类 的原型等于父类的原型
+    // 2. 让寄生类的原型等于父类的原型
     F.prototype = parent.prototype;
     // 3. 将寄生类 的实例赋值给子类原型
-    child.prototyp = new F();
-}
+    child.prototype = new F();
+    return child;
+};
+function People (name,age) {
+    this.name = name;
+    this.age  =  age;
+};
+People.prototype.getName = function() {
+    console.log(`我的名字是${this.name}`);
+};
+function Kid(name,age,sex) {
+    this.name = name;
+    this.age = age;
+    this.sex = sex;
+};
+inherit(Kid,People);	// 寄生式继承
+
+let kid = new Kid('小白',10,'男');
+
+kid.getName();			// 我的名字是小白
 ```
 
+> 问题： 无法复用 构造函数中存储属性（自身属性）问题
+
+**5. 寄生组合式继承(寄生+构造函数)**
+
+> 这是ES 6之前的最高配置，只需要在子类对象中添加构造函数式继承语句`People(父类).call(this,参数1,参数2)`就OK了，基本没问题
+
+# ES 6
+
+## 1. 类的定义
+
+```javascript
+// 创建类
+class Book {
+    // 构造函数s
+    constructor (title, price) {
+        // 实例数据(每个实例都会有的特有数据)
+        this.title = title;
+        this.price = price;
+    }
+    // 原型方法(每个实例都可以使用的公用方法)
+    getTitle() {
+        console.log(this.title);
+    }
+    getPrice() {
+        console.log(this.price);
+    }
+    // 原型属性(添加给自身的属性，自能自己访问)
+    set num(val) {
+        this._num = val;
+    }
+    get num() {
+        return this._num;
+    }
+    //  静态数据(只能通过Book.xx访问)
+    static get write() {
+        return 'zzq';
+    }
+    static getWrite() {
+        return this.write;
+    }
+}
+// 外部添加静态数据
+Book.msg = 'hello';
+Book.getMsg = function() {
+    return this.msg;
+}
+// 实例化
+let b1 = new Book('javascript', 59);
+let b2 = new Book('面试题', 60);
+console.log(b1, b2);	// Book {title: "javascript", price: 59}
+console.log(b1._num);		// undefined;
+console.log(Book.write);	//zzq
+```
+
+## 类的继承
+
+ES 6继承非常容易，而且还可以重写 构造函数，不过既然是继承，那就要给constructor添加`super()`，它的参数就是父类传入的参数 
+
+```javascript
+// JsBook 继承于 Book
+class JsBook extends Book{
+    // 可以重写构造函数
+    constructor(title, price, score) {
+        // 继承父类的部分
+        super(title, price);
+        // 自己拥有 的部分
+        this.score =  score;
+    }
+}
+let jb = new JsBook('js', 60, 100);
+```
+
+> 到这里，JS类的发展史就说完了，内容挺多，要完全理解还是需要点时间滴，感谢观看，记得点赞~~
