--- a/校招面经.md
+++ b/校招面经.md
@@ -27,8 +27,8 @@
 	1. 安全问题：web socket和透明代理的实现存在严重的安全问题，同时 web storage,  web socket这样的功能很容易被黑客利用，来到区用户的信息
 
    	2. 完善性：许多特性各浏览器支持程度不同
-   	3. 技术门槛：HTML 5简化开发者工作的同时带给我们更多的属性和API需要学习，像web worker、web socket、 web storage等新特性，后台甚至浏览器原理的只是，机遇同时也是巨大的挑战
-   	4. 性能：某些平台的引擎问题导致HTML 5性能低下
+            	3. 技术门槛：HTML 5简化开发者工作的同时带给我们更多的属性和API需要学习，像web worker、web socket、 web storage等新特性，后台甚至浏览器原理的只是，机遇同时也是巨大的挑战
+         	4. 性能：某些平台的引擎问题导致HTML 5性能低下
 
 <h3>3.  DOCTYPE 的作用，严格模式与混杂模式如何区分？有何意义？</h3>
 
@@ -72,3 +72,151 @@
 * link 在加载页面的同时载入；@import只会在页面完全载入后加载
 * link 无兼容问题；@import实在CSS 2.1提出的，低版本浏览器不支持
 * link 支持使用JavaScript控制DOM的区改变样式；@import不支持
+
+<h3>8. JS闭包(closure)</h3>
+
+**定义**：闭包是指有权访问另外一个函数作用域中的变量的函数
+
+> 在函数内部定义一个函数，该函数可以访问外部函数的数据
+
+```javascript
+function demo() {
+	let num = 10;
+	function inner(0 {
+	console.log(num);
+	});
+};
+```
+
+> 如果我们将inner函数返回出去，那么在外部就可以访问demo中的数据了
+
+```javascript
+function demo() {
+    let num = 10;
+    return function inner() {
+        console.log(num);
+    };
+};
+let outter = demo();
+outter();		// 10
+```
+
+此时outter是demo返回的一个函数，当执行它时，它会找自己本身，也就是inner,然后按照规则向上查找变量
+
+**重点**：每次重新执行demo()之后，会产生一个新的密闭环境
+
+```javascript
+function demo() {
+    let num = 0;
+    return function inner() {
+        console.log(num++);
+    };
+};
+let o1 = demo();
+o1();		// 0
+o1();		// 1
+o1();		// 2
+let o2 = demo();
+o2();		// 0
+o2();		// 1
+```
+
+> 闭包无法被JS垃圾回收机制回收
+
+<h3>9. IIFE(即时调用函数)</h3>
+
+函数在创建时不会立即执行，有时候我们需要一些函数希望它在创建的时候直接执行，就可以通过一些操作符，让它可以立即执行
+
+**后跟小括号表示直接调用**
+
+```javascript
+let demo1 = function() {
+    console.log('aaa');
+}();			// aaa
+```
+
+当使用函数定义式时，直接加括号会报错，解决办法就是将它矮化为表达式
+
+```javascript
+// 可以使用+,-,!,(),最常用的是()
+(function demo() {
+    console.log('cccc');
+})();			// cccc
+```
+
+<h3>10. 一个闭包数组IIFE的综合问题</h3>
+
+```javascript
+// 改造下面代码，是arr[3]()输出结果为3
+let arr = [];
+for (var i=0;i<5;i++) {
+    arr[i] = function() {
+        console.log(i);
+    };
+};
+arr[3];			// 5
+```
+
+**最简单的修改方法var -> let**
+
+这是因为let有块级作用域
+
+```javascript
+for (let i=0;i<5;i++) {
+    arr[i] = function() {
+        console.log(i);
+    }
+}
+```
+
+**使用闭包函数**
+
+```javascript
+for (var i=0;i<5;i++) {
+    arr[i] = (function(i){
+        return function() {
+            console.log(i);
+        };
+    })(i);		// 这里的i是传给return的函数的参数
+}
+```
+
+<h3>JS也可以有函数重载??</h3>
+
+重载的概念，我们希望通过传入的参数不同让函数返回结果不同;
+
+但是重载在JS里面是不存在的，不过我们可以通过arguments来模拟函数的重载
+
+
+
+理想的函数重载
+
+```JavaScript
+function add(a) {
+    return a+10;
+};
+function add(a, b) {
+    return a+b;
+};
+// 理想输出
+console.log(add(5));		// 15
+console.log(add(5,6));		// 11
+// Js实际输出
+console.log(add(5));	// NaN
+console.log(add(5,6));	// 11
+```
+
+> 在JS中，不管是同名函数还是同名变量(var声明的)，后面声明的都会覆盖前面声明的，所以add(5)就会返回5+undefined；所以为NaN
+
+所以我们可以通过arguments来决定函数执行什么功能，从而实现类重载
+
+```javascript
+function add(a,b,c) {
+    if(arguments.length==1) return a+10;
+    else if(arguments.length==2) return a+b;
+    else return -1;
+}
+console.log(add(5));
+console.log(add(5,6));
+```
+
