--- a/校招面经.md
+++ b/校招面经.md
@@ -181,7 +181,7 @@ for (var i=0;i<5;i++) {
 }
 ```
 
-<h3>JS也可以有函数重载??</h3>
+<h3>11. JS也可以有函数重载??</h3>
 
 重载的概念，我们希望通过传入的参数不同让函数返回结果不同;
 
@@ -220,3 +220,34 @@ console.log(add(5));
 console.log(add(5,6));
 ```
 
+<h3>12. touch事件</h3>
+
+> 在移动端我们更多的使用touch事件，而不常用click事件，这是因为click会出现一些问题
+
+```javascript
+// touch事件
+<div id='div' style="height: 100px;width: 100px;background-color:red"></div>
+<script>
+        let div = document.getElementById('div');
+        let date = Date.now();
+        div.onclick = function() {
+            console.log("click",Date.now() - date);		// 23,这里显示的数字表示click事件比touchstart事件晚触发了多少毫秒
+            
+        }
+        div.ontouchstart = function() {
+            console.log("touch start");
+            date = Date.now();
+        }
+        div.ontouchend = function() {
+            console.log("touch end", Date.now() - date);
+        }
+    </script>
+```
+
+**问题**
+
+	1. click事件不会立即触发，等待是不是双击
+ 	2. 如果touchstart-touchend时间稍微长点，click事件会被取消
+ 	3. 点击穿透问题
+
+> touch还有`touchemove   touchcancel`事件
